--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,15 @@
   <link rel="preload" as="font" href="fonts/bloggersans-medium.woff" type="font/woff" crossorigin>
   <link rel="stylesheet" href="css/style.min.css">
   <title>Погнали? - Формы</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J1VNGBM5CL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-J1VNGBM5CL');
+  </script>
 </head>
 
 <body class="page-body">
